...
            android:textSize="16sp"


            />

        <TextView
            android:id="@+id/tvDescriptionContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/border_pink"
            android:padding="8dp"
            android:maxLines="2"
...
            android:layout_width="wrap_content"
            android:layout_height="17dp">

        </Space>

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Date of Purchase: "
            android:textColor="@color/black"
            android:textSize="16dp"
            tools:ignore="TextSizeCheck" />
...
            android:layout_width="wrap_content"
            android:layout_height="17dp">

        </Space>

        <TextView
            android:id="@+id/value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Estimated Value: "
            android:textColor="@color/black"
            android:textSize="16dp"
            tools:ignore="TextSizeCheck" />
...
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
...
